--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@ progress::-webkit-progress-value {
     background-color:white;
     padding-left:3vw;
     /*justify-content:center;*/
+    opacity: 0;
     align-items:center;
     display:flex;
     transition:0.5s;
