--- a/index.html
+++ b/index.html
@@ -59,8 +59,6 @@ progress::-webkit-progress-value {
     border-radius:15px;
     background-color:white;
     padding-left:3vw;
-    /*justify-content:center;*/
-    opacity: 0;
     align-items:center;
     display:flex;
     transition:0.5s;
@@ -77,6 +75,9 @@ progress::-webkit-progress-value {
 }
 
 @keyframes fadeIn {
+    from{
+         opacity: 0;
+    }
     to {
         opacity: 1;
         transform: translateY(0);
