--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ transition:0.5s;
 
 #quests{
     position:absolute;
-    top:55dvh;
+    top:60dvh;
     left:50%;
     transform:translate(-50%,-50%);
     justify-content:center;
@@ -234,7 +234,7 @@ transition:0.5s;
 
 .oefening{
 width:20vw;
-height:15vw;
+height:10vw;
 border-radius:15px;
 background-color:white;
 display:flex;
@@ -259,11 +259,65 @@ bottom:calc(50% - 3vw);
 font-size:2vw;
 }
 
+#oefeningen{
+width:100vw;
+height:40vh;
+display:flex;
+padding:0;
+margin:0;
+gap:10px;
+flex-wrap:wrap;
+justify-content:center;
+align-items:center;
+margin-top:90vh;
+margin-bottom:20vh;
+}
 
+#streak{
+  color:black;
+  font-family:arial;
+  font-size:3vw;
+}
+#streakicon{
+  width:4vw;
+  height:4vw;
+}
+#streaks{
+  position:absolute;
+  top:2%;
+  left:90%;
+  width:9vw;
+  height:5vw;
+  display:flex;
+  flex-direction: row;
+  align-items:center;
+  justify-content: center;
+}
+}
+
+#streak{
+  color:black;
+  font-family:arial;
+  font-size:5vw;
+}
+#streakicon{
+  width:6vw;
+  height:6vw;
+}
+#streaks{
+  position:absolute;
+  top:2%;
+  left:90%;
+  width:10vw;
+  height:7vw;
+  display:flex;
+  flex-direction: row;
+  align-items:center;
+  justify-content: center;
 }
 </style>
 </head>
-<body onload="lod();">
+<body onload="lod();savdate();">
     <div id="ranked">
         <div id="rankedfoto">
             <img id="rankedicon" src="https://mmonster.co/media/a6/95/18/1715773621/fortnite-bronze-2.webp">
@@ -271,7 +325,12 @@ font-size:2vw;
     </div>
     <progress id="rankedprogress"max="100" value="0"></progress>
 
- <div id="quests">
+<div id="streaks">
+<p id="streak"></p>
+<img id="streakicon" src="https://play-lh.googleusercontent.com/mWPQZ_XTp94cYgZKK6VzfzZS3Pfs_DWE6MmxS6elHyWgU7r217aYBBWpnRRiHFAM1r_V">
+</div> 
+
+<div id="quests">
 
     <div onclick="veranderquest('1')" class="quest" id="q1">
         <h2 id="tekst1">Loading</h2>
@@ -285,7 +344,7 @@ font-size:2vw;
         <img class="icoon" id="icoon2" src="https://cdn-icons-png.freepik.com/512/4315/4315499.png">
     </div>
 
-    <div onclick="veranderquest('3')" onmouseenter="veranderquest('3')"class="quest" id="q3">
+    <div onclick="veranderquest('3')"class="quest" id="q3">
         <h2 id="tekst3">Loading</h2>
         <h3 id="punten3">..</h3>
         <img onclick="veranderquest('3')" class="icoon" id="icoon3" src="https://cdn-icons-png.freepik.com/512/4315/4315499.png">
@@ -320,10 +379,14 @@ font-size:2vw;
   <p>wall sit</p>
   </div>
   </div>
+  <br>
  <script>
     var rankedscore = 0;
     var welkequestnummer = 4;
     var welkerank = 0;
+    const d = new Date();
+    let day = d.getDate();
+    var streak;
 
     console.log("hey");
     function veranderquest(welkeq){
@@ -346,6 +409,36 @@ fetch(`https://gravel-spiffy-floss.glitch.me/q${welkequestnummer}`, requestOptio
         
     }
     
+
+    function savdate() {
+    let vndg = parseInt(localStorage.getItem('dag')) || 0;
+    streak = parseInt(localStorage.getItem('strx')) || 0;
+
+    if (vndg) {
+        let verschil = day - vndg;
+
+        if (verschil === 0) {
+            console.log("Je bent al ingelogd vandaag");
+        } 
+        else if (verschil === 1 || verschil === -30 || verschil === -29 || verschil === -28 || verschil === -27) {
+            console.log("Streak verhoogd");
+            streak++;
+        } 
+        else {
+            console.log("Streak gereset");
+            streak = 1;
+        }
+    } else {
+        streak = 1;
+    }
+
+
+    localStorage.setItem("strx", streak);
+    localStorage.setItem("dag", day);
+    document.getElementById("streak").innerHTML = streak;
+}
+
+
     function extrapunten(pntn){
     rankedscore += pntn;
     document.getElementById("rankedprogress").value = rankedscore;
