--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="manifest" href="manifest.json?v=1.0.1">
+<link rel="icon" type="image/png" sizes="144x144" href="rankoutlogo144.png">
+<link rel="icon" type="image/png" sizes="192x192" href="rankoutlogo192.png">
+<link rel="icon" type="image/png" sizes="512x512" href="rankoutlogo512.png">
 <style>
 body{
     background-color: #f7f7ff;
