--- a/index.html
+++ b/index.html
@@ -2,10 +2,6 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="manifest" href="manifest.json?v=1.0.1">
-<link rel="icon" type="image/png" sizes="144x144" href="rankoutlogo144.png">
-<link rel="icon" type="image/png" sizes="192x192" href="rankoutlogo192.png">
-<link rel="icon" type="image/png" sizes="512x512" href="rankoutlogo512.png">
 <style>
 body{
     background-color: #f7f7ff;
@@ -67,6 +63,7 @@ progress::-webkit-progress-value {
     align-items:center;
     display:flex;
     transition:0.5s;
+    transform: translateY(20px);
     animation: fadeIn 0.8s ease-out;
 }
 .quest:active {
@@ -75,12 +72,14 @@ progress::-webkit-progress-value {
 }
 .oefening {
     opacity: 0;
+    transform: translateY(20px);
     animation: fadeIn 0.8s ease-out forwards;
 }
 
 @keyframes fadeIn {
     to {
         opacity: 1;
+        transform: translateY(0);
     }
 }
 #quests{
