--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="manifest" href="manifest.json">
 <style>
 body{
     background-color: #f7f7ff;
@@ -63,7 +64,6 @@ progress::-webkit-progress-value {
     align-items:center;
     display:flex;
     transition:0.5s;
-    transform: translateY(20px);
     animation: fadeIn 0.8s ease-out;
 }
 .quest:active {
@@ -79,7 +79,6 @@ progress::-webkit-progress-value {
 @keyframes fadeIn {
     to {
         opacity: 1;
-        transform: translateY(0);
     }
 }
 #quests{
